--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
+    "axios": "^1.4.0",
     "clsx": "^2.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
+    "tailwind-scrollbar": "^3.0.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
