--- a/package.json
+++ b/package.json
@@ -10,18 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@savvywombat/tailwindcss-grid-areas": "^3.1.0",
+    "axios": "^1.4.0",
     "clsx": "^2.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-router-dom": "^6.15.0",
     "tailwind-scrollbar": "^3.0.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
